-
Bug
-
Resolution: Fixed
-
Minor
-
Lustre 2.13.0
-
None
-
3
-
9223372036854775807
My fix (https://review.whamcloud.com/#/c/35198/2) for
LU-12411 was flawed. While we do not want to allow adding routes to unreachable gateways, this shouldn't be a fatal error when parsing routes entries. lnet_add_route() should return EHOSTUNREACH in such a case, so that lnet_parse_route() will continue working and add any routes that are reachable. Unreachable routes are still logged to the console, but they are not added to route table.