lnet/lnet/router.c
@@ -345,7 +345,7 @@ lnet_add_route(__u32 net, __u32 hops, lnet_nid_t gateway,
 		CERROR("Cannot add route with gateway %s. There is no local interface configured on LNet %s\n",
 		       libcfs_nid2str(gateway),
 		       libcfs_net2str(LNET_NIDNET(gateway)));
-		return -EINVAL;
+		return -EHOSTUNREACH;
 	}
 
 	/* Assume net, route, all new */
